<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>1.2.2</version>
        <relativePath/>
    </parent>
    <artifactId>cui-http</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>CUI HTTP</name>
    <description>Provides a number of http-related utilities .
    </description>
    <url>https://github.com/cuioss/cui-http/</url>
    <scm>
        <url>https://github.com/cuioss/cui-http/</url>
        <connection>
            scm:git:https://github.com/cuioss/cui-http/.git
        </connection>
        <developerConnection>
            scm:git:https://github.com/cuioss/cui-http/
        </developerConnection>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/cuioss/cui-http/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.jar.plugin.automatic.module.name>de.cuioss.http</maven.jar.plugin.automatic.module.name>
    </properties>
    <dependencies>
        <dependency>
            <groupId>de.cuioss</groupId>
            <artifactId>cui-java-tools</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
        </dependency>
        <dependency>
            <groupId>de.cuioss.test</groupId>
            <artifactId>cui-test-generator</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Unit testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.2</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- Create separate generators artifact for security testing utilities -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>generators</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>generators</classifier>
                            <classesDirectory>${project.build.testOutputDirectory}</classesDirectory>
                            <includes>
                                <include>**/http/security/generators/**</include>
                                <include>**/http/security/database/**</include>
                            </includes>
                            <excludes>
                                <exclude>**/http/security/generators/**/*Test.class</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Configure Surefire to run tests on classpath to bypass JPMS module restrictions -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
